--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_generative_ai: ^0.4.7
+  http: ^1.5.0
+  image_picker: ^1.2.0
+  flutter_gemini: ^3.0.0
+  provider: ^6.1.5+1
+
 
 dev_dependencies:
   flutter_test:
